[project]
name = "hello_world_crew"
version = "0.1.0"
description = "hello_world_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.134.0,<1.0.0"
]

[project.scripts]
hello_world_crew = "hello_world_crew.main:run"
run_crew = "hello_world_crew.main:run"
train = "hello_world_crew.main:train"
replay = "hello_world_crew.main:replay"
test = "hello_world_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
